25- Ingress/default-backend-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-backend
spec:
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 8080
